@@ -1,15 +1,3 @@
-buildscript {
-	    repositories {	      
-	        mavenCentral()	
-	    }
-	
-	    dependencies {
-	        //classpath 'com.bmuschko:gradle-tomcat-plugin:2.2.4'
-	        classpath 'org.akhikhl.gretty:gretty:+'
-	        
-	    }
-}
- 
 configure(allprojects) { project ->
 	group = PROJ_GROUP
 	version = PROJ_VERSION
@@ -163,19 +151,7 @@ configure([project(":sessionmonitor"),project(":session")]) { subproject ->
 
 		}
 	}
-	if(enable_gretty.equals("true"))
-	{
-	    apply plugin: 'org.akhikhl.gretty'
-	    
-	     gretty {
-		    httpPort = 80
-		   
-		    contextPath = subproject.name
-		    jvmArgs = ['-Xmx1024M', '-XX:PermSize=128M', '-XX:MaxPermSize=256M']
-		  //  servletContainer = 'jetty7'
-		  
-		  }
-	} 
+	
 	/**war {
 	    //from 'WebRoot'
 	    // adds a file-set to the root of the archive
